--- a/tech/src/main/resources/application.properties
+++ b/tech/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+#Basic Spring Boot Config for Oracle
+spring.datasource.url=jdbc:oracle:thin:@oracle.fiap.com.br:1521:ORCL
+spring.datasource.username=RM550244
+spring.datasource.password=060704
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
+#hibernate config
+spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
