--- a/SedenTech/src/main/resources/application.properties
+++ b/SedenTech/src/main/resources/application.properties
@@ -1,15 +1,10 @@
-#Basic Spring Boot Config for Oracle
-spring.datasource.url=jdbc:oracle:thin:@oracle.fiap.com.br:1521:ORCL
-spring.datasource.username=RM550244
-spring.datasource.password=060704
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+# Configurações do H2
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-# JPA Settings
-spring.jpa.database=oracle
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
 
 # CORS Settings
 cors.allowed-origins=*
